[FIX] Ironsights, they were fucked up
[FIX] mp_falldamage not working
[FIX] Chat bug after gamemode_reload(developer's thing)
[FIX] Health showing below 0
[FIX] SPP exploit where clients could retrieve steamID's with Lua.(Should only be possible with status in console)
[FIX] Bug in SPP menu that made the settings reset themselves(The settings now use the DarkRP settings system)
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[CHANGE] Custom shipments without a team entered will make it so that every team can spawn the shipment
[CHANGE] Moved changelog part in init.lua to the changelog.txt file
[CHANGE] The way of saving settings and globals, it now doesn't use text files but SQL
[CHANGE] Admins can touch world props to players can touch world props so players can pick up world items.
[CHANGE] Chiefs can now change to cops by doing /cp
[CHANGE] When there's only one option in the keys menu, it will do that option instantly without opening the menu
[CHANGE] Made all yell,whisper,pm ETC. in colour!!!
[CHANGE] Helplabel structure(now MUCH faster!)
[CHANGE] The chat to use the new system
[CHANGE] Removed /zombiehelp and put it in the F1 menu.
[CHANGE] the way how gravgun punting is done
[CHANGE] You can't shoot unless you see through the sight post (ANTI DM!)
[CHANGE] Weapon animations, they are now standard holstered, unless you see through the sight post
[CHANGE] the way chat colours work, it now works completely different!
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings
[REMOVE] Restriction of /dropweapon. You can now drop any weapon.
[REMOVE] CSE base and other unused swep bases